watch(language): add examples on Kotlin capabilities

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,6 +4,6 @@ ktor {
     }
 
     application {
-        modules = [ com.bonitasoft.watch.kotlin.ktor.BlogAppKt.com.bonitasoft.watch.kotlin.main ]
+        modules = [ com.bonitasoft.watch.kotlin.ktor.BlogAppKt###.com.bonitasoft.watch.kotlin.main ]
     }
 }
